reports statistics api is added for front end. /reports/stat
